Minimum viable model working.

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
 
   <script
     src="https://checkout.stripe.com/v3/checkout.js" class="stripe-button"
-    data-key="<%= PUBLIC_KEY %>"
+    data-key="<%= @public_key %>"
     data-name="Interplay"
     data-description="Daycare payment">
   </script>
