--- a/views/charge.erb
+++ b/views/charge.erb
@@ -1,1 +1,4 @@
-<h2>Thanks, you paid <strong>$<%= @amount %></strong>!</h2>
+<div id="centerwrapper">
+  <h2>Thank you for your payment <%= @name %>.</br>
+  You have paid <strong>$<%= @amount %></strong> for <%= @child %>'s care for the month of <%= @month %>!</h2>
+</div>
