--- a/views/charge.erb
+++ b/views/charge.erb
@@ -1,4 +1,8 @@
-<div id="centerwrapper">
-  <h2>Thank you for your payment <%= @name %>.</br>
-  You have paid <strong>$<%= @amount %></strong> for <%= @child %>'s care for the month of <%= @month %>!</h2>
+<div class="panel panel-default" xmlns="http://www.w3.org/1999/html"/>
+  <div class="panel-heading"></div>
+    <div class="panel-body">
+      <h2>Thank you for your payment <%= @parent %>.</br>
+      You have paid <strong>$<%= @amount %></strong> for <%= @child %>'s care for the month of <%= @month %>!</h2>
+    </div>
+  <div class="panel-footer"></div>
 </div>
