--- a/views/charge.erb
+++ b/views/charge.erb
@@ -2,7 +2,7 @@
   <div class="panel-heading"></div>
     <div class="panel-body">
       <h2>Thank you for your payment <%= @parent %>.</br>
-      You have paid <strong>$<%= @amount %></strong> for <%= @child %>'s care for the month of <%= @month %>!</h2>
+      You have paid $<%= @amount %> for <%= @child %>'s care for the month of <%= @month %>!</h2>
     </div>
   <div class="panel-footer"></div>
 </div>
