--- a/views/index.erb
+++ b/views/index.erb
@@ -4,25 +4,25 @@
     <form action="/charge" method="post" xmlns="http://www.w3.org/1999/html">
        <div class="form-group">
          <label for="childName">Child's Name</label>
-         <input type="text" class="form-control" id="childName" name="child" placeholder="Enter your child's name">
+         <input class="form-control" type="text"  id="childName" name="child" placeholder="Enter your child's name">
        </div>
        <div class="form-group">
          <label for="parentName">Your Name</label>
-         <input type="text" name="parent" class="form-control" id="parentName" placeholder="Enter your name">
+         <input class="form-control" type="text" name="parent" id="parentName" placeholder="Enter your name">
        </div>
        <div class="form-group">
          <label for="paymentMonth">Month</label>
-         <select class="form-control" name="month">
+         <select name="month" class="form-control" >
            <% @months.each do |month| %>
            <%= "<option>#{month}</option>/n" %>
            <% end %>
          </select>
        </div>
        <div class="form-group">
-         <label class="sr-only" for="exampleInputAmount">Amount (in dollars)</label>
+         <label class="sr-only" for="amount">Amount (in dollars)</label>
          <div class="input-group">
            <div class="input-group-addon">$</div>
-           <input type="text" class="form-control" id="exampleInputAmount" name="amount" placeholder="Amount">
+           <input class="form-control" type="text" id="amount" name="amount" placeholder="Amount">
          </div>
        </div>
      <script
